[metadata-server] raft Heartbeat virtual thread